# joespond

./: .gitignore  CLAUDE.md  README.md  joes_pond_prism_analysis.ipynb  pyproject.toml  requirements.txt
archive/: dead_end_joes_pond_iceout_analysis.ipynb
data/: joes_pond_iceout.csv
data/ncei_daily/: US1VTCL0001_1987-12-01_2025-04-17.csv  US1VTCL0006_1987-12-01_2025-04-17.csv  US1VTCL0006_2010-01-01_2010-03-01.csv  US1VTCL0006_2011-01-01_2011-03-01.csv  US1VTCL0006_2012-01-01_2012-03-01.csv  US1VTCL0006_2013-01-01_2013-03-01.csv  US1VTCL0006_2015-01-01_2015-03-01.csv  US1VTCL0011_1987-12-01_2025-04-17.csv  US1VTCL0020_1987-12-01_2025-04-17.csv  US1VTCL0027_1987-12-01_2025-04-17.csv  US1VTCL0027_2017-01-01_2017-03-01.csv  US1VTCL0027_2018-01-01_2018-03-01.csv  US1VTCL0027_2019-01-01_2019-03-01.csv  US1VTCL0027_2021-01-01_2021-03-01.csv  US1VTCL0027_2023-01-01_2023-03-01.csv  US1VTCL0027_2024-01-01_2024-03-01.csv  US1VTCL0027_2025-01-01_2025-03-01.csv  US1VTCL0027_2026-01-01_2026-03-01.csv  US1VTCL0030_1987-12-01_2025-04-17.csv  US1VTCL0030_2017-01-01_2017-03-01.csv  US1VTCL0030_2018-01-01_2018-03-01.csv  US1VTCL0030_2019-01-01_2019-03-01.csv  US1VTCL0030_2021-01-01_2021-03-01.csv  US1VTCL0034_1987-12-01_2025-04-17.csv  US1VTCL0035_1987-12-01_2025-04-17.csv  US1VTCL0038_1987-12-01_2025-04-17.csv  US1VTCL0038_2019-01-01_2019-03-01.csv  US1VTCL0038_2021-01-01_2021-03-01.csv  US1VTCL0038_2023-01-01_2023-03-01.csv  US1VTCL0038_2026-01-01_2026-03-01.csv  US1VTCL0040_1987-12-01_2025-04-17.csv  US1VTCL0041_1987-12-01_2025-04-17.csv  US1VTCL0044_1987-12-01_2025-04-17.csv  (+70 more)
(+5 files in other folders)
